Bug 160421 - A flipped extruded custom shape is wrongly illuminated
Summary: A flipped extruded custom shape is wrongly illuminated
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Regina Henschel
URL:
Whiteboard: target:24.8.0 target:24.2.3
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-29 17:44 UTC by Regina Henschel
Modified: 2024-04-02 15:53 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Mirrored triangle by PowerPoint (112.50 KB, application/vnd.ms-powerpoint)
2024-03-29 17:44 UTC, Regina Henschel
Details
Own shapes to be mirrored (17.58 KB, application/vnd.oasis.opendocument.presentation)
2024-03-29 17:45 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2024-03-29 17:44:29 UTC
Created attachment 193393 [details]
Mirrored triangle by PowerPoint

Open attached ppt document. It contains a shape left, the shape vertically flipped in the center and the shape horizontally flipped at the right side.
Below is a screenshot of how PowerPoint renders it.

It is not a problem of import filter, but of rendering. Open the odp file. It has three times the same shape. Go to the center shape and flip it vertically, go to the right shape and flip it horizontally. Notice that the illumination is wrong.
Comment 1 Regina Henschel 2024-03-29 17:45:04 UTC
Created attachment 193394 [details]
Own shapes to be mirrored
Comment 2 m_a_riosv 2024-03-29 19:40:09 UTC
Reproducible
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c4023d3ec604abfff38be2053e2989c7ec2ba8c1
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 3 Regina Henschel 2024-03-29 22:38:32 UTC
https://gerrit.libreoffice.org/c/core/+/165562
Comment 4 Commit Notification 2024-03-30 20:19:47 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9761d4239de6398d4f6ecf08356f2ce18e502a04

tdf#160421 flip lights too for flipped extruded shapes

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 m_a_riosv 2024-03-31 05:06:01 UTC
Verified
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c9d4f99b2bb54ac7735b3e0d0cadbafbd0279518
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 6 Commit Notification 2024-04-02 15:53:24 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/9ae95bbdfe6494fb87a6e368de8ea3070c5241fb

tdf#160421 flip lights too for flipped extruded shapes

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.