tdf#160421 flip lights too for flipped extruded shapes

If an extruded custom shape is mirrored, the lights in the scene are
also mirrored. This should not happen. MS Office keeps the light
direction in relation to the camera direction for binary files and pptx
files with legacy camera. We should do the same, especially since the UI
does not allow the user to set the light directions at arbitrary angles.
Otherwise the shape receives only ambient light.

Change-Id: I091d78c581b3d247f8b0680cd57654e3df330cdd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165562
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>
(cherry picked from commit 9761d4239de6398d4f6ecf08356f2ce18e502a04)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165614
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>